2000-02-11  Christopher James Lahey  <clahey@helixcode.com>

	* test-check.c: Added test of sort arrows.

	* e-table-col.h, e-table-col.c: Added sort arrows for column
	headers (It doesn't actually sort.  It just displays the arrows.)

	* e-table-header-item.c: Added display of arrows.

2000-02-11  Christopher James Lahey  <clahey@helixcode.com>

	* clip.png: Test column header image.

	* test-check.c: Test pixbuf column headers.

	* e-table-col.h, e-table-col.c: Added pixbufs for column headers.

	* e-table-header-item.c (draw_button): Draw pixbuf column headers properly.

2000-02-11  Christopher James Lahey  <clahey@helixcode.com>

	* e-cell-text.h, e-cell-text.c: Add an editable argument to
	e_cell_text_new.

	* test-table.c, test-cols.c, test-check.c: Set the editable
	argument to e_cell_text_new.

2000-02-11  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-header-item.h, e-table-header-item.c: Added reordering
	of columns.

	* e-table-header.c: Fixed a couple of bugs in the move column and
	remove column functions.

2000-02-11  Christopher James Lahey  <clahey@helixcode.com>

	* e-cell-text.c: Made space around text look right.  Added a
	blinking cursor.

2000-02-11  Miguel de Icaza  <miguel@gnu.org>

	* e-table-item.c (eti_header_structure_changed): Add nice
	assertion. 

2000-02-10  Christopher James Lahey  <clahey@helixcode.com>

	* e-cell-text.c: Handle button releases properly.

	* e-table-header-item.c (ethi_start_drag): Added a drag icon.

2000-02-09  Christopher James Lahey  <clahey@helixcode.com>

	* e-cell-text.c: Tweaked e-cell-text.  Added a white background
	and tweaked the borders.

2000-02-09  Christopher James Lahey  <clahey@helixcode.com>

	* Makefile.am: Changes where e-text is included from.

2000-02-07  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-item.c (eti_event): Fixed some motion event
	bugs. (incorrect x and y.)

	* Makefile.am: Added includes for dependencies in
	evolution/widgets/libevolutionwidgets.a
