@@ -1,3 +1,12 @@
+2000-02-12  Iain Holmes  <ih@csd.abdn.ac.uk>
+
+	* e-table-header-item.c (ethi_drag_motion): Check the ethi is actually
+	the one being dragged. Prevents crashes when trying to drag headeritems
+	and there are multiple headeritems on the same canvas.
+	(ethi_drag_end): Same.
+	(ethi_drag_drop): Same.
+	(ethi_drag_leave): Same.
+
 2000-02-11  Christopher James Lahey  <clahey@helixcode.com>
 
 	* test-check.c: Added test of sort arrows.
